# agentwritebook

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  INTERACTIVE_MODE.md  MODEL_MANAGEMENT.md  MODEL_UPDATE_SUMMARY.md  QUICKSTART.md  README.md  STREAMING_AND_LANGUAGE_UPDATE.md  STREAMING_FINAL_FIX.md  STREAMING_FIX_UPDATE.md  STREAMING_PERFECT.md  STREAMING_WORD_BUFFER.md  TROUBLESHOOTING.md  UPGRADE_SUMMARY.md  examples.md  main.py  pyproject.toml
agentwritebook/: __init__.py  main.py
agentwritebook/agents/: __init__.py  base_agent.py  orchestrator.py  planner_agent.py  reviewer_agent.py  writer_agent.py
agentwritebook/config/: __init__.py  settings.py
agentwritebook/utils/: file_manager.py  interactive_wizard.py  model_helper.py  ollama_client.py
